crates/plotnik-tests/tests/02-parser/recovery_unexpected/bare_colon_inside_node.txt
Q = (a : (b))
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:8
  |
1 | Q = (a : (b))
  |        ^
